<resources>
    <string name="app_name">JustJavaN</string>
    <string name="hint">Name</string>
    <string name="toppings">Toppings</string>
    <string name="toppingsName">Whipped cream</string>
    <string name="toppingsName2">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="DecrementSign">-</string>
    <string name="IncrementSign">+</string>
    <string name="quantityValue">2</string>
    <string name="Ordertext">ORDER</string>
</resources>
