<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<LinearLayout

    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint"
        android:inputType="textCapWords"
        android:paddingStart="16dp"
        android:paddingEnd="0dp"/>

    <TextView
        style="@style/HeaderTextStyle"
        android:text="@string/toppings"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp" />

    <CheckBox
        android:id="@+id/whipped_cream"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toppingsName"
        android:textSize="16sp"
        android:paddingStart="24dp"
        android:paddingEnd="0dp"
        android:layout_marginStart="16dp" />

    <CheckBox
        android:id="@+id/add_chocolate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/toppingsName2"
        android:textSize="16sp"
        android:paddingStart="24dp"
        android:paddingEnd="0dp"
        android:layout_marginStart="16sp"/>

    <TextView
        style="@style/HeaderTextStyle"
        android:id="@+id/ABC"
        android:layout_margin="16dp"
        android:text="@string/quantity" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="16dp">
    <Button
        android:id="@+id/button1"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:onClick="increment"
        android:text="@string/IncrementSign"
        android:textSize="16sp"
         />

    <TextView
        android:id="@+id/quantity_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/quantityValue"
        android:textSize="16sp"
         />

    <Button
        android:id="@+id/button2"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:onClick="decrement"
        android:text="@string/DecrementSign"        />

    </LinearLayout>



    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="submitOrder"
        android:text="@string/Ordertext"
        android:layout_margin="16dp"
        android:textSize="16sp"
        />

</LinearLayout>
</ScrollView>